--- a/themes/yilia/source-src/css/article-inner.scss
+++ b/themes/yilia/source-src/css/article-inner.scss
@@ -154,7 +154,10 @@
     /*font-weight: bold;*/
     color: #574C4C;
     padding-bottom: 5px;
-    border-bottom: 1px solid #ddd;
+    /*border-bottom: 1px solid #ddd;*/
+  }
+  h3 {
+	border-bottom: 1px solid #ddd;
   }
   video{
     max-width: 100%;
