--- a/themes/yilia/source-src/css/categories.scss
+++ b/themes/yilia/source-src/css/categories.scss
@@ -18,7 +18,7 @@
   }
 
   .category-list-item-list-item{
-    margin: 10px 25px;
+    margin: 10px 10px;
   }
 
   .category-list-item-list-count{
@@ -54,6 +54,7 @@
 
   .category-list-item-list-child {
 	border-left: 2px solid #657b83;
+	margin-left: 25px;
   }
   
   .category-list-child {
