--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -1,6 +1,6 @@
 <article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %> <%if(index){%> article-index<%}%>" itemscope itemprop="blogPost">
   <% if (!post.noDate){ %>
-	<%- partial('post/date', {class_name: 'archive-article-date', date_format: null}) %>
+	<%- partial('post/date', {class_name: 'article-date', date_format: null}) %>
   <% } %>
   <div class="article-inner">
     <% if (post.link || post.title){ %>
