--- a/themes/yilia/layout/_partial/css.ejs
+++ b/themes/yilia/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.11dccd.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.065a4e.css">
