--- a/themes/yilia/source-src/css/mobile.scss
+++ b/themes/yilia/source-src/css/mobile.scss
@@ -61,6 +61,14 @@ html, body, #container {
     width: 100%;
     color: #ddd;
 }
+
+#container .article .article-title {
+	font-size: 18px;
+	max-width: 185px;
+	display: block;
+	margin: 0;
+}
+
 .mobile-mask {
     width: 100%;
     height: 100%;
@@ -146,7 +154,7 @@ html, body, #container {
     padding: 10px;
     margin: 10px 0;
     border: 0;
-    font-size: 16px;
+    font-size: 14px;
     color: #555;
     .article-more-link {
         margin: 0;
