--- a/themes/yilia/source-src/css/tags.scss
+++ b/themes/yilia/source-src/css/tags.scss
@@ -106,6 +106,7 @@
     color: #999;
     margin-right: 7.6923%;
     float: right;
+	width: 100%;
     .icon {
         margin: 5px 5px 5px 0;
     }
