--- a/themes/yilia/layout/_partial/css.ejs
+++ b/themes/yilia/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.283352.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.8c19d4.css">
