--- a/themes/yilia/source-src/css/left.scss
+++ b/themes/yilia/source-src/css/left.scss
@@ -41,6 +41,7 @@
 			text-overflow: ellipsis;
 			display: -webkit-box;
 			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
 		}
 		.header-menu{
 			font-weight: 300;
