--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -127,6 +127,11 @@
 	</script>
   <% } %>
 
+  <%if (theme.livere_uid) { %>
+      <%- partial('post/livere') %>
+  <% } %>
+  <span id="busuanzi_container_page_pv">本文总阅读量<span id="busuanzi_value_page_pv"></span>次</span>
+
   <% if (theme.disqus || config.disqus_shortname){ %>
     <section id="comments">
       <div id="disqus_thread"></div>
