--- a/themes/yilia/layout/_partial/tools.ejs
+++ b/themes/yilia/layout/_partial/tools.ejs
@@ -101,7 +101,15 @@
     <%if(hasAboutme){%>
     	<section class="tools-section tools-section-me" q-show="aboutme">
   	  	<%if(theme.aboutme){%>
-  	  		<div class="aboutme-wrap" id="js-aboutme"><%=theme.aboutme%></div>
+  	  		<div class="aboutme-wrap" id="js-aboutme">
+				<%=theme.aboutme%>
+				<p></p>
+				<p>
+					<span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span></p>
+				<p>
+					<span id="busuanzi_container_site_uv">本站访客数<span id="busuanzi_value_site_uv"></span>人</span>
+				</p>
+			</div>
   	  	<%}%>
     	</section>
     <%}%>
