--- a/themes/yilia/source-src/css/article.scss
+++ b/themes/yilia/source-src/css/article.scss
@@ -198,7 +198,7 @@
 	*/
     color: #574C4C;
     padding-bottom: 5px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #999;
   }
   h3,h4,h5,h6{
     margin-top: 20px;
